--- a/public/ds-book-r/p03-11-svm.html
+++ b/public/ds-book-r/p03-11-svm.html
@@ -684,9 +684,8 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
   <li><a href="#giới-thiệu" id="toc-giới-thiệu" class="nav-link active" data-scroll-target="#giới-thiệu"><span class="header-section-number">25.1</span> Giới thiệu</a></li>
   <li><a href="#non-linear-svm" id="toc-non-linear-svm" class="nav-link" data-scroll-target="#non-linear-svm"><span class="header-section-number">25.2</span> Non-linear SVM</a></li>
   <li><a href="#tìm-hiểu-kỹ-hơn-về-maximal-margin-classifier" id="toc-tìm-hiểu-kỹ-hơn-về-maximal-margin-classifier" class="nav-link" data-scroll-target="#tìm-hiểu-kỹ-hơn-về-maximal-margin-classifier"><span class="header-section-number">25.3</span> Tìm hiểu kỹ hơn về Maximal Margin Classifier</a></li>
-  <li><a href="#ưu-nhược-điểm-của-svm" id="toc-ưu-nhược-điểm-của-svm" class="nav-link" data-scroll-target="#ưu-nhược-điểm-của-svm"><span class="header-section-number">25.4</span> Ưu nhược điểm của SVM</a></li>
-  <li><a href="#thực-hành-với-r" id="toc-thực-hành-với-r" class="nav-link" data-scroll-target="#thực-hành-với-r"><span class="header-section-number">25.5</span> Thực hành với R</a></li>
-  <li><a href="#tài-liệu-tham-khảo" id="toc-tài-liệu-tham-khảo" class="nav-link" data-scroll-target="#tài-liệu-tham-khảo"><span class="header-section-number">25.6</span> Tài liệu tham khảo</a></li>
+  <li><a href="#thực-hành-với-r" id="toc-thực-hành-với-r" class="nav-link" data-scroll-target="#thực-hành-với-r"><span class="header-section-number">25.4</span> Thực hành với R</a></li>
+  <li><a href="#tài-liệu-tham-khảo" id="toc-tài-liệu-tham-khảo" class="nav-link" data-scroll-target="#tài-liệu-tham-khảo"><span class="header-section-number">25.5</span> Tài liệu tham khảo</a></li>
   </ul>
 </nav>
     </div>
@@ -712,7 +711,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 
 <section id="giới-thiệu" class="level2" data-number="25.1">
 <h2 data-number="25.1" class="anchored" data-anchor-id="giới-thiệu"><span class="header-section-number">25.1</span> Giới thiệu</h2>
-<p><code>Support Vector Machine (SVM)</code> là một thuật toán thuộc nhóm học máy có định hướng (Supervised Learning). Thuật toán này được sử dụng từ cuối những năm 1990s, đầu 2000 trong việc dự báo.</p>
+<p><code>Support Vector Machine (SVM)</code> là một thuật toán thuộc nhóm học máy có định hướng (<code>supervised learning</code>). Thuật toán này được sử dụng từ cuối những năm 1990s, đầu 2000 trong việc dự báo.</p>
 <p>SVM xây dựng một mặt phẳng giúp phân cách giữa giữa hai nhóm. Mặt phằng được sử dụng phân loại hai nhóm được gọi là <code>hyperplane</code>, các điểm gần nhất với mặt phẳng được gọi là <code>support vector</code>. Khoảng cách giữa <code>hyperplane</code> và các <code>support vector</code> được gọi là margin. Mặt phẳng tối ưu (<code>optimum hyperplance</code>) là mặt phẳng có khoảng cách đến các điểm <code>support vector</code> (margin) là lớn nhất.</p>
 <p><img src="Images/svm-01.png" class="img-fluid"></p>
 <p><strong>Lưu ý</strong>: Với cùng 1 tập dữ liệu, có thể có 1 hoặc nhiều mặt phẳng (<code>hyperplane</code>) giúp phân loại các quan sát với kết quả tốt như nhau. Tuy nhiên, <code>hyperplane</code> tốt nhất là <code>hyperplane</code> có margin lớn hơn. Xem ví dụ dưới đây.</p>
@@ -737,10 +736,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <p>Giả sử biến cần phân loại y có giá trị {-1,1}, ta có:</p>
 <p><span class="math inline">\(\sum_{j=1}^p\beta_iX_{ij} &gt; 0\)</span> nếu <span class="math inline">\(y_i = 1\)</span> và <span class="math inline">\(\sum_{j=1}^p\beta_iX_{ij} &lt; 0\)</span> nếu <span class="math inline">\(y_i = -1\)</span></p>
 <p>Để phân loại các quan sát, có thể tồn tại rất nhiều hyperplane. Do đó, người ta chọn 1 hyperplane có vị trí nằm “xa” nhất giữa 2 miền cần phân loại. Khoảng cách gần nhất giữa 2 miền cần phân loại gọi là <em>margin</em>. Mặt phẳng <em>vuông góc</em> với đường margin này gọi là <em>maximal margin classifier</em></p>
-<p>Khi dữ liệu không chỉ còn đơn giản là <code>margin classifier</code> mà phải sử dụng phép biến đổi dữ liệu với <code>kernel</code>, mô hình được gọi là <code>support vector machine</code>. Trong thực tế, khi xây dựng <code>support vector machine</code>, ta không thể tìm được mặt phẳng phân loại hoàn hảo mà sẽ phải chấp nhận sai số nhất định, mặt phẳng có sai số khi phân loại được gọi là <code>soft margin</code>.</p>
-</section>
-<section id="ưu-nhược-điểm-của-svm" class="level2" data-number="25.4">
-<h2 data-number="25.4" class="anchored" data-anchor-id="ưu-nhược-điểm-của-svm"><span class="header-section-number">25.4</span> Ưu nhược điểm của SVM</h2>
+<p>Khi dữ liệu không chỉ còn đơn giản là <code>margin classifier</code> mà phải sử dụng phép biến đổi dữ liệu với <code>kernel</code>, mô hình được gọi là <code>support vector machine</code>. Trong thực tế, khi xây dựng <code>support vector machine</code>, ta không thể tìm được mặt phẳng phân loại hoàn hảo mà sẽ phải chấp nhận sai số nhất định, mặt phẳng có sai số khi phân loại được gọi là <code>soft margin</code>. ## Ưu nhược điểm của SVM</p>
 <p><strong>Ưu điểm</strong>:</p>
 <ul>
 <li>Mô hình hiệu quả với nhiều biến (không gian nhiều chiều). Do đó, SVM hoạt động đặc biệt hiệu quả khi phân tích <code>sentiment</code>, phân loại tài liệu <code>document</code>, phân tích <code>gene</code></li>
@@ -752,9 +748,22 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <li>Thời gian tính toán phức tạp với khi có số lượng quan sát lớn</li>
 <li>Không có điểm xác suất khi dự báo: Với mỗi kết quả dự báo, chỉ có kết quả phân loại theo nhóm</li>
 </ul>
+<div class="callout callout-style-default callout-warning callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Lưu ý
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p>Thuật toán <code>svm</code> thực tế hiện giờ ít được sử dụng mà đang được thay thể bởi nhóm thuật toán cây <code>boosting</code></p>
+</div>
+</div>
 </section>
-<section id="thực-hành-với-r" class="level2" data-number="25.5">
-<h2 data-number="25.5" class="anchored" data-anchor-id="thực-hành-với-r"><span class="header-section-number">25.5</span> Thực hành với R</h2>
+<section id="thực-hành-với-r" class="level2" data-number="25.4">
+<h2 data-number="25.4" class="anchored" data-anchor-id="thực-hành-với-r"><span class="header-section-number">25.4</span> Thực hành với R</h2>
 <p>Các tham số cần tối ưu:</p>
 <ul>
 <li><span class="math inline">\(C\)</span>: Tham số quy định độ <code>soft</code> của mặt phẳng SVM, C càng lớn, các quan sát phân loại sai bị đánh trọng số càng lớn</li>
@@ -836,9 +845,9 @@ Parameters:
      degree:  3 
      coef.0:  0 
 
-Number of Support Vectors:  473
+Number of Support Vectors:  471
 
- ( 248 225 )
+ ( 250 221 )
 
 
 Number of Classes:  2 
@@ -850,18 +859,18 @@ Levels:
 <div class="cell-output cell-output-stdout">
 <pre><code>     
 .       No  Yes
-  No  2410   62
-  Yes    4   24</code></pre>
+  No  2409   72
+  Yes    2   17</code></pre>
 </div>
 </div>
 </section>
-<section id="tài-liệu-tham-khảo" class="level2" data-number="25.6">
-<h2 data-number="25.6" class="anchored" data-anchor-id="tài-liệu-tham-khảo"><span class="header-section-number">25.6</span> Tài liệu tham khảo</h2>
+<section id="tài-liệu-tham-khảo" class="level2" data-number="25.5">
+<h2 data-number="25.5" class="anchored" data-anchor-id="tài-liệu-tham-khảo"><span class="header-section-number">25.5</span> Tài liệu tham khảo</h2>
 <ul>
-<li>[https://www.edureka.co/blog/support-vector-machine-in-r/]</li>
-<li>[https://www.datacamp.com/community/tutorials/support-vector-machines-r]</li>
-<li>[https://www.analyticsvidhya.com/blog/2017/09/understaing-support-vector-machine-example-code/]</li>
-<li>[https://towardsdatascience.com/support-vector-machine-simply-explained-fee28eba5496]</li>
+<li><a href="">https://www.edureka.co/blog/support-vector-machine-in-r/</a></li>
+<li><a href="">https://www.datacamp.com/community/tutorials/support-vector-machines-r</a></li>
+<li><a href="">https://www.analyticsvidhya.com/blog/2017/09/understaing-support-vector-machine-example-code/</a></li>
+<li><a href="">https://towardsdatascience.com/support-vector-machine-simply-explained-fee28eba5496</a></li>
 <li>Support Vector Machine - chater 9 - Introduction to Statistical Learning with R</li>
 </ul>
 
