--- a/public/ds-book-r/p03-15-nonlinear.html
+++ b/public/ds-book-r/p03-15-nonlinear.html
@@ -728,6 +728,9 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <h2 data-number="26.2" class="anchored" data-anchor-id="polynomial-regression"><span class="header-section-number">26.2</span> Polynomial regression</h2>
 <p>Phương trình của polynomial regression</p>
 <p><span class="math display">\[y_i = \beta_0 + \beta_1X_i + \beta_2X_i^2+...+\beta_dX_i^d +\epsilon\]</span></p>
+<hr>
+<p><img src="Images/p03-15-polynomial.png" class="img-fluid"></p>
+<hr>
 <p><strong>Lưu ý</strong>:</p>
 <ul>
 <li>Phương trình trên có thể ước lượng đơn giản với OLS</li>
@@ -930,6 +933,9 @@ F-statistic: 47.19 on 6 and 2993 DF,  p-value: &lt; 2.2e-16</code></pre>
 <p><img src="p03-15-nonlinear_files/figure-html/unnamed-chunk-6-1.png" class="img-fluid" width="672"></p>
 </div>
 </div>
+<center>
+<font size="4">§</font>
+</center>
 <p>Các bước xây dựng mô hình <code>loess</code> như sau.</p>
 <ol type="1">
 <li><p>Xác định tham số <span class="math inline">\(s\)</span> cua mô hình. <span class="math inline">\(s\)</span> có giá trị trong khoảng 0-1. Ví dụ <span class="math inline">\(s=0.3\)</span>, mô hình sẽ lấy 30% quan sát gần nhất với điểm <span class="math inline">\(x_0\)</span> để xây dựng mô hình. Tham số <span class="math inline">\(s\)</span> được gọi là <code>span parameter</code>. Số lượng quan sát để xây dựng <code>local regression</code> tại mỗi điểm là <span class="math inline">\(k\)</span></p></li>
@@ -1049,10 +1055,26 @@ F-statistic: 47.19 on 6 and 2993 DF,  p-value: &lt; 2.2e-16</code></pre>
 <p><img src="p03-15-nonlinear_files/figure-html/unnamed-chunk-7-1.png" class="img-fluid" width="672"></p>
 </div>
 </div>
+<center>
+<font size="4">§</font>
+</center>
+<div class="callout callout-style-default callout-warning callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Lưu ý
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p>Mô hình <code>loess</code> được sử dụng rất rộng rãi để có thể nhanh chóng ước lược về xu hướng giữa 2 biến nhanh chóng theo hướng phi tuyến tính</p>
+</div>
+</div>
 </section>
 <section id="generalized-additive-models-gam" class="level2" data-number="26.7">
 <h2 data-number="26.7" class="anchored" data-anchor-id="generalized-additive-models-gam"><span class="header-section-number">26.7</span> Generalized Additive Models (GAM)</h2>
-<p>Mô hình <code>GAM</code> là mô hình mở rộng của các mô hình phía trên vaf dựa trên 2 giả định:</p>
+<p>Mô hình <code>GAM</code> là mô hình mở rộng của các mô hình phía trên và dựa trên 2 giả định:</p>
 <ul>
 <li>Biến cần dự báo <span class="math inline">\(y\)</span> có thể có mối quan hệ tuyến tính hoặc phi tuyến tính với các biến độc lập</li>
 <li>Ta có thể cùng lúc xây dựng mô hình giữa biến phụ thuộc <span class="math inline">\(y\)</span> với từng biến độc lập <span class="math inline">\(x_i\)</span> và có thể dự báo <span class="math inline">\(y\)</span> bằng cách cộng các mô hình vừa xây dựng.</li>
@@ -1116,7 +1138,7 @@ Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1</code></pre>
 <h2 data-number="26.8" class="anchored" data-anchor-id="tài-liệu-tham-khảo"><span class="header-section-number">26.8</span> Tài liệu tham khảo</h2>
 <ul>
 <li>Introduction to Statistical Learning - chapter 7</li>
-<li>https://www.itl.nist.gov/div898/handbook/pmd/section1/dep/dep144.htm</li>
+<li><a href="">https://www.itl.nist.gov/div898/handbook/pmd/section1/dep/dep144.htm</a></li>
 </ul>
 
 
