--- a/public/ds-book-r/p04-03-kmeans.html
+++ b/public/ds-book-r/p04-03-kmeans.html
@@ -712,22 +712,25 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 
 <section id="giới-thiệu" class="level2" data-number="37.1">
 <h2 data-number="37.1" class="anchored" data-anchor-id="giới-thiệu"><span class="header-section-number">37.1</span> Giới thiệu</h2>
-<p>Trong chương này, chúng ta sẽ cùng tìm hiểu về thuật toán <code>clustering K-means</code> - một thuật toán thuộc về nhóm <strong>unsupervised learning</strong> (“học không giám sát”).</p>
-<p><code>Clustering K-means</code> có thể ứng dụng trong các lĩnh vực như ngân hàng hay thương mại điện tử vào việc phân nhóm khách hàng dựa trên những đặc điểm về hành vi, thói quen chi tiêu và demographics của họ. Điều đó sẽ giúp cho ngân hàng hay các công ty thương mại điện tử có thể hiểu rõ được hành vi khách hàng của mình, để sau đó có thể offer những sản phẩm, dịch vụ phù hợp với nhu cầu của từng khách hàng.</p>
-<p>Thuật toán <code>K-means</code> sẽ nhóm các đối tượng (quan sát) có những đặc điểm và hành vi tương đồng vào K nhóm bất kỳ. Số lượng nhóm K sẽ phụ thuộc vào mục đích cũng như bối cảnh mà chúng ta đặt ra (thông thường nên từ 2 đến 10 nhóm).</p>
+<p>Trong chương này, chúng ta sẽ cùng tìm hiểu về thuật toán <code>clustering K-means</code> - một thuật toán thuộc về nhóm <strong>unsupervised learning</strong> (“học máy không định hướng trước”). Thuật toán <code>K-means</code> sẽ nhóm các đối tượng (quan sát) có những đặc điểm và hành vi tương đồng vào K nhóm bất kỳ. Số lượng nhóm K sẽ phụ thuộc vào mục đích cũng như bối cảnh mà chúng ta đặt ra (thông thường nên từ 2 đến 10 nhóm).</p>
+<p><code>Clustering K-means</code> có thể ứng dụng trong các lĩnh vực như ngân hàng hay thương mại điện tử vào việc phân nhóm khách hàng dựa trên những đặc điểm về hành vi, thói quen chi tiêu và demographics của họ. Điều đó sẽ giúp cho doanh nghiệp có thể hiểu rõ được hành vi khách hàng của mình, để sau đó có thể đưa ra được những sản phẩm, dịch vụ phù hợp với nhu cầu của từng khách hàng.</p>
 </section>
 <section id="thuật-toán" class="level2" data-number="37.2">
 <h2 data-number="37.2" class="anchored" data-anchor-id="thuật-toán"><span class="header-section-number">37.2</span> Thuật toán</h2>
 <p><strong>Thuật toán của <code>K-means</code></strong> diễn ra như sau:</p>
 <ul>
-<li><p><strong>Bước 1</strong>: Chọn ngẫu nhiên K tâm/centroids</p></li>
-<li><p><strong>Bước 2</strong>: Tính khoảng cách từ các đối tượng/quan sát đến K tâm</p></li>
-<li><p><strong>Bước 3</strong>: Dựa vào giá trị khoảng cách ở bước 2, chúng ta nhóm các quan sát vào K nhóm: Các quan sát gần với tâm nào hơn thì sẽ thuộc về nhóm đó.</p></li>
-<li><p><strong>Bước 4</strong>: Xác định các tâm mới của K nhóm (tâm mới của mỗi nhóm có tọa độ bằng trung bình tọa độ của các quan sát trong nhóm đó).</p></li>
-<li><p><strong>Bước 5</strong>: Lặp lại bước 2 đến bước 4 cho đến khi không có sự thay đổi kết quả phân nhóm các quan sát hoặc theo số lượng <code>iterations</code> mà chúng ta đặt ra cho thuật toán chạy.</p></li>
+<li><strong>Bước 1</strong>: Chọn ngẫu nhiên K tâm/centroids</li>
+<li><strong>Bước 2</strong>: Tính khoảng cách từ các đối tượng/quan sát đến K tâm</li>
+<li><strong>Bước 3</strong>: Dựa vào giá trị khoảng cách ở bước 2, chúng ta nhóm các quan sát vào K nhóm: Các quan sát gần với tâm nào hơn thì sẽ thuộc về nhóm đó.</li>
+<li><strong>Bước 4</strong>: Xác định các tâm mới của K nhóm (tâm mới của mỗi nhóm có tọa độ bằng trung bình tọa độ của các quan sát trong nhóm đó).</li>
+<li><strong>Bước 5</strong>: Lặp lại bước 2 đến bước 4 cho đến khi không có sự thay đổi kết quả phân nhóm các quan sát hoặc theo số lượng <code>iterations</code> mà chúng ta đặt ra cho thuật toán chạy.</li>
 </ul>
+<hr>
 <p>Các bước của kmean có thể trực quan hóa như sau.</p>
 <p><img src="Images/kmean-01.gif" class="img-fluid"></p>
+<center>
+<font size="4">§</font>
+</center>
 <p><strong>Xác định k tối ưu</strong></p>
 <p>Thuật toán <code>k-means</code> đòi hỏi ta phải xác định <code>k</code> trước khi xây dựng mô hình. Do đó, ngay khi bắt đầu, ta không thể biết chính xác số tối ưu của <code>centroid</code> mà phải qua vài bước thử để có thể xác định chính xác. Thông thường có hai cách xác định k tối ưu:</p>
 <ul>
@@ -745,17 +748,17 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <p><strong>Ưu điểm</strong> của thuật toán <code>clustering K-means</code> là đơn giản và dễ tính toán.</p>
 <p>Tuy nhiên thuật toán này có một số <strong>nhược điểm</strong> sau:</p>
 <ul>
-<li><strong>Thứ nhất</strong>, do lấy ngẫu nhiên tâm/centroid nên khi dữ liệu lớn với rất nhiều các biến đầu vào thuật toán có thể phân loại các quan sát vào các nhóm khác nhau tại mỗi vòng (<code>iteration</code>).</li>
-<li><strong>Thứ hai</strong>, thuật toán sẽ gặp vấn đề nếu các biến đầu vào có các đơn vị khác nhau, ví dụ như: biến chi tiêu hoặc thu nhập của khách hàng đơn vị là triệu đồng, biến đánh dấu khách hàng có sử dụng thẻ tín dụng (dummy 1-0), hoặc biến tỷ lệ chi tiêu thẻ tín dụng trên hạn mức được cấp, v.v.</li>
+<li><strong>Thứ nhất</strong>, do lấy ngẫu nhiên tâm/centroid nên khi dữ liệu lớn với rất nhiều các biến đầu vào thuật toán có thể phân loại các quan sát vào các nhóm khác nhau tại mỗi lần phân cụm. Hay nói cách khác, thuật toán thiếu tính ổn định với dữ liệu lớn</li>
+<li><strong>Thứ hai</strong>, thuật toán sẽ gặp vấn đề khó khăn khi các biến đầu vào có các đơn vị khác nhau, ví dụ như: biến chi tiêu hoặc thu nhập của khách hàng đơn vị là triệu đồng, biến đánh dấu khách hàng có sử dụng thẻ tín dụng (dummy 1-0), hoặc biến tỷ lệ chi tiêu thẻ tín dụng trên hạn mức được cấp, v.v.</li>
 </ul>
 <p>Vì vậy, để khắc phục vấn đề trên trước khi áp dụng thuật toán <code>K-means</code>, chúng ta cần phải chuẩn hóa dữ liệu đầu vào bằng cách <code>scaling</code> dữ liệu:</p>
 <p><span class="math display">\[x_i = \frac{x_i - min(x_i)}{max(x_i) - min(x_i)}\]</span></p>
 <ul>
-<li><strong>Thứ ba</strong>, <code>k-means</code> không thể thực hiện tốt việc phân nhóm nếu tồn tại các nhóm con nằm lồng trong nhóm cha.</li>
+<li><strong>Thứ ba</strong>, <code>k-means</code> không thể thực hiện tốt việc phân nhóm nếu tồn tại các nhóm đặc biệt - như tồn tại các nhóm nằm lồng nhau.</li>
 </ul>
 <p><img src="Images/cluster-02.png" class="img-fluid"></p>
 <ul>
-<li><strong>Thứ tư</strong>, khó giải thích cho đơn vị kinh doanh hiểu. Với trường hợp có 2 biến, có thể giải thích dễ dàng nhưng khi từ 4-5 biến trở lên dùng cho mô hình phân nhóm, gần như rất khó giải thích cho các bên nghiệp vụ.</li>
+<li><strong>Thứ tư</strong>, khó giải thích cho đơn vị kinh doanh hiểu. Với trường hợp có 2 biến, có thể giải thích dễ dàng nhưng khi từ 4-5 biến trở lên dùng cho mô hình phân nhóm, sẽ rất khó để đơn vị kinh doanh có thể hiểu chính xác.</li>
 </ul>
 </section>
 <section id="thực-hành-trên-r" class="level2" data-number="37.4">
@@ -832,15 +835,36 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 </section>
 <section id="lưu-ý" class="level2" data-number="37.5">
 <h2 data-number="37.5" class="anchored" data-anchor-id="lưu-ý"><span class="header-section-number">37.5</span> Lưu ý</h2>
+<div class="callout callout-style-default callout-warning callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Lưu ý
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p>Thuật toán <code>kmean</code> đơn giản nhưng không dễ thực hiện trong thực tế do phân cụm chỉ là bước đầu tiên của cả quá trình ứng dụng thuật toán. Các bước tổng thể khi triển khai thực tế bao gồm:</p>
+<ul>
+<li>Phân cụm dựa theo các biến đầu vào</li>
+<li>Tính toán các chỉ số điển hình theo các cụm và đặt tên profile</li>
+<li>Dự báo khách hàng mới (nếu có)</li>
+</ul>
+</div>
+</div>
 <p><strong>Dự báo với nhóm mới</strong></p>
-<p>Sau khi phân nhóm các quan sát với <code>k-means</code>, trong nhiều trường hợp, ta có thể dự báo quan sát mới thuộc nhóm nào. Để thực hiện điều này, cách đơn giản nhất là tính toán khoảng cách giữa quan sát mới và với các <code>centroid</code> vừa tạo. Quan sát mới gần với centroid nào nhất sẽ được gán vào nhóm đó</p>
+<p>Sau khi phân nhóm các quan sát với <code>k-means</code>, trong nhiều trường hợp, ta có thể dự báo quan sát mới thuộc nhóm nào. Để thực hiện điều này, cách đơn giản nhất là <em>tính toán khoảng cách giữa quan sát mới và với các <code>centroid</code> vừa tạo</em>. Quan sát mới gần với centroid nào nhất sẽ được gán vào nhóm đó</p>
 <p><strong>Trọng số khi dự báo quan sát mới</strong></p>
 <p>Trong nhiều trường hợp, việc dự báo 1 quan sát thuộc nhóm nào sẽ chịu ảnh hưởng bởi 1 vài biến quan trọng nào đấy theo nhu cầu kinh doanh. Ví dụ, phân nhóm khách hàng nhưng trọng số quan trọng là hành vi giao dịch. Trong trường hợp này, ta cũng có thể tính toán khoảng cách giữa quan sát mới với các <code>centroid</code> mới tạo nhưng đánh trọng số cao hơn với 1 số biến nhất định.</p>
+<center>
+<font size="4">§</font>
+</center>
 <p><strong>Các bước khi xây dựng profile</strong></p>
 <p>Khi phân nhóm xong, việc tiếp theo là xây dựng profile của các nhóm. Tuy nhiên, khi xây dựng mô hình không thể đưa hết các biến vào mà cần chia làm 2 bước.</p>
 <ul>
 <li><strong>Bước 1</strong>: Phân nhóm dựa trên 1 số các biến cơ bản. VD: Dựa trên giá trị, tần xuất giao dịch của khách hàng thuộc các nhóm chi tiêu khác nhau. Tại bước này, cần đặt tên các nhóm dựa trên phân bổ và hành vi điển hình của khách hàng.</li>
-<li><strong>Bước 2</strong>: Map ngược lại các biến cần quan tâm sau khi đã xác định được chính xác khách hàng thuộc profile nào. VD: Tính trung bình nhóm tuổi, thu nhập của khách hàng với nhóm profile thiên về chi tiêu online</li>
+<li><strong>Bước 2</strong>: Quay ngược lại các biến cần quan tâm sau khi đã xác định được chính xác khách hàng thuộc <code>cluster</code> nào. Ta cần tính toán các chỉ số thống kê điển hình như <code>median</code>, <code>mean</code>,… của các biến và đặt tên nhóm tại bước này.</li>
 </ul>
 </section>
 <section id="tài-liệu-tham-khảo" class="level2" data-number="37.6">
