--- a/public/ds-book-r/p07-15-quantile-regression.html
+++ b/public/ds-book-r/p07-15-quantile-regression.html
@@ -717,6 +717,20 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <p><img src="p07-15-quantile-regression_files/figure-html/unnamed-chunk-2-1.png" class="img-fluid" width="672"></p>
 </div>
 </div>
+<hr>
+<div class="callout callout-style-default callout-warning callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Lưu ý
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p>Mô hình hồi quy phân vị có thể được sử dụng khi phân tích hành vi và ảnh hưởng của độ nhạy thu nhập lên mức chi tiêu hay độ nhạy cảm của tiền gửi với lãi suất.</p>
+</div>
+</div>
 </section>
 <section id="xây-dựng-mô-hình" class="level2" data-number="58.2">
 <h2 data-number="58.2" class="anchored" data-anchor-id="xây-dựng-mô-hình"><span class="header-section-number">58.2</span> Xây dựng mô hình</h2>
@@ -730,17 +744,17 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <section id="so-sánh-với-ols" class="level2" data-number="58.3">
 <h2 data-number="58.3" class="anchored" data-anchor-id="so-sánh-với-ols"><span class="header-section-number">58.3</span> So sánh với OLS</h2>
 <ul>
-<li><p><strong>Tác động của biến độc lập đối với biến phụ thuộc</strong>:</p>
+<li><strong>Tác động của biến độc lập đối với biến phụ thuộc</strong>:
 <ul>
 <li><strong>OLS</strong>: <strong>trung bình</strong> của biến phụ thuộc</li>
 <li><strong>Quantile regression</strong>: <strong>từng phân vị</strong> của biến phụ thuộc</li>
 </ul></li>
-<li><p>Ảnh hưởng của các <strong>quan sát bất thường (outliers)</strong>:</p>
+<li>Ảnh hưởng của các <strong>quan sát bất thường (outliers)</strong>:
 <ul>
 <li><strong>OLS</strong>: chịu tác động lớn, các quan sát bất thường cần được loại bỏ để ước lượng OLS không chị chệch</li>
 <li><strong>Quantile regression</strong>: có tính ổn định, ít chịu tác động bởi outliers</li>
 </ul></li>
-<li><p>Điều kiện về <strong>phân phối của biến phụ thuộc</strong>:</p>
+<li>Điều kiện về <strong>phân phối của biến phụ thuộc</strong>:
 <ul>
 <li><strong>OLS</strong>: phân phối chuẩn, đối xứng quanh giá trị trung bình</li>
 <li><strong>Quantile regression</strong>: không cần đối xứng quanh giá trị trung bình. Do đó, có thể thể hiện tác động khác nhau của biến độc lập đến biến phụ thuộc ở từng phân vị</li>
